--- a/lec/2019-09-06.tex
+++ b/lec/2019-09-06.tex
@@ -22,7 +22,7 @@ We need to construct a subsequence of $a_n$, say $b_k$, choosing indices
 \begin{equation*}
     n_1 \le n_2 \le \ldots \qq{and defining} b_k := a_{n_k}.
 \end{equation*}
-    Consider the closed sets $E_n = \cl \set{a_n, a_{n+1}, \ldots}$. They're nested, bounded, and nonempty. Hence there's an $x \in \cap E_n$ which is a point of closure for every $\set{a_n, a_{n+1}, \ldots}$. Then $b_k \to x$.
+    Consider the closed sets $E_n = \Cl \set{a_n, a_{n+1}, \ldots}$. They're nested, bounded, and nonempty. Hence there's an $x \in \cap E_n$ which is a point of closure for every $\set{a_n, a_{n+1}, \ldots}$. Then $b_k \to x$.
 \end{proof}
 
 \begin{defn}[Cauchy Sequence]
